tests/fixtures/invalid/app/invalid-nested-get.php
<?php

use Illuminate\Support\Facades\Config;

echo Config::get('app.nested.invalid_key');
